Реализован спринт 8: - добавлены поля duration, startTime и endTime для задач - реализован расчёт времени и продолжительности эпиков - добавлена проверка пересечений задач по времени - реализован метод getPrioritizedTasks и сортировка по startTime - переписаны циклы на Stream API - добавлен абстрактный класс тестов TaskManagerTest - добавлены тесты для Epic, HistoryManager и проверки пересечений